@@ -51,8 +51,8 @@ static int ms_globmatch (const char *string, const char *pattern);
  * @param[in] pubversion Publication version to match
  * @param[out] ppselecttime Pointer-to-pointer to return the matching ::MS3SelectTime entry
  *
- * @returns A pointer to matching ::MS3Selections entry successful
- * match and NULL for no match or error.
+ * @returns A pointer to matching ::MS3Selections entry on success and NULL for
+ * no match or error.
  ***************************************************************************/
 const MS3Selections *
 ms3_matchselect (const MS3Selections *selections, const char *sid, nstime_t starttime,
@@ -285,15 +285,15 @@ ms3_addselect (MS3Selections **ppselections, const char *sidpattern, nstime_t st
  * If any of the naming parameters are not supplied (pointer is NULL)
  * a wildcard for all matches is substituted.
  *
- * As a special case, if the location code (loc) is set to @c "--" to
- * match an empty location code it will be translated to an empty string
- * to match libmseed's notation.
+ * As a special case, if the location code is set to @c "--" to match an empty
+ * location code it will be translated to an empty string to match the internal
+ * handling of empty location codes.
  *
  * @param[in] ppselections ::MS3Selections to add new selection to
  * @param[in] network Network code, may contain globbing characters
- * @param[in] station Statoin code, may contain globbing characters
+ * @param[in] station Station code, may contain globbing characters
  * @param[in] location Location code, may contain globbing characters
- * @param[in] channel channel code, may contain globbing characters
+ * @param[in] channel Channel code, may contain globbing characters
  * @param[in] starttime Start time for selection, ::NSTUNSET for open
  * @param[in] endtime End time for selection, ::NSTUNSET for open
  * @param[in] pubversion Publication version for selection, 0 for any
@@ -758,169 +758,203 @@ ms_isinteger (const char *string)
   return 1;
 }
 
-/**************************************************************************
- * robust glob pattern matcher
- * ozan s. yigit/dec 1994
- * public domain
- *
- * glob patterns:
- *	*	matches zero or more characters
- *	?	matches any single character
- *	[set]	matches any character in the set
- *	[^set]	matches any character NOT in the set
- *		where a set is a group of characters or ranges. a range
- *		is written as two characters seperated with a hyphen: a-z denotes
- *		all characters between a to z inclusive.
- *	[-set]	set matches a literal hypen and any character in the set
- *	[]set]	matches a literal close bracket and any character in the set
- *
- *	char	matches itself except where char is '*' or '?' or '['
- *	\char	matches char, including any pattern character
- *
- * examples:
- *	a*c		ac abc abbc ...
- *	a?c		acc abc aXc ...
- *	a[a-z]c		aac abc acc ...
- *	a[-a-z]c	a-c aac abc ...
- *
- * Revision 1.4  2004/12/26  12:38:00  ct
- * Changed function name (amatch -> globmatch), variables and
- * formatting for clarity.  Also add matching header globmatch.h.
- *
- * Revision 1.3  1995/09/14  23:24:23  oz
- * removed boring test/main code.
- *
- * Revision 1.2  94/12/11  10:38:15  oz
- * charset code fixed. it is now robust and interprets all
- * variations of charset [i think] correctly, including [z-a] etc.
- *
- * Revision 1.1  94/12/08  12:45:23  oz
- * Initial revision
- ***************************************************************************/
+static int _match_charclass (const char **pp, unsigned char c);
 
-#define GLOBMATCH_TRUE 1
-#define GLOBMATCH_FALSE 0
-#define GLOBMATCH_NEGATE '^' /* std char set negation char */
-
-/***************************************************************************
- * ms_globmatch:
+/** ************************************************************************
+ * @brief Check if a string matches a globbing pattern.
  *
- * Check if a string matches a globbing pattern.
+ * Supported semantics:
+ * `*` matches zero or more characters, e.g. `*.txt`
+ * `?` matches a single character, e.g. `a?c`
+ * `[]` matches a set of characters `[abc]`
+ * `[a-z]` matches a range of characters `[A-Z]`
+ * `[!abc]` negation, matches when no characters in the set, e.g. `[!ABC]` or `[^ABC]`
+ * `[!a-z]` negation, matches when no characters in the range, e.g. `[!A-Z]` or `[^A-Z]`
+ * `\` prefix to match a literal character, e.g. `\*`, `\?`, `\[`
  *
- * Return 0 if string does not match pattern and non-zero otherwise.
+ * @param string  The string to check.
+ * @param pattern The globbing pattern to match.
+ *
+ * @returns 0 if string does not match pattern and non-zero otherwise.
  ***************************************************************************/
 static int
 ms_globmatch (const char *string, const char *pattern)
 {
-  int negate;
-  int match;
-  int c;
+  if (string == NULL || pattern == NULL)
+    return 0;
 
-  while (*pattern)
+  const char *star_p = NULL; /* position of last '*' in pattern */
+  const char *star_s = NULL; /* position in string when last '*' seen */
+  unsigned char c;
+
+  if (string == NULL || pattern == NULL)
+    return 0;
+
+  for (;;)
   {
-    if (!*string && *pattern != '*')
-      return GLOBMATCH_FALSE;
+    c = (unsigned char)*pattern++;
 
-    switch (c = *pattern++)
+    switch (c)
     {
+    case '\0':
+      /* End of pattern: must also be end of string unless a previous '*'
+         can consume more characters. */
+      if (*string == '\0')
+        return 1;
+      if (star_p)
+        goto star_backtrack;
+      return 0;
+
+    case '?':
+      if (*string == '\0')
+        goto star_backtrack;
+      string++;
+      break;
 
     case '*':
+      /* Collapse consecutive '*' */
       while (*pattern == '*')
         pattern++;
 
-      if (!*pattern)
-        return GLOBMATCH_TRUE;
+      /* Trailing '*' matches everything */
+      if (*pattern == '\0')
+        return 1;
 
-      if (*pattern != '?' && *pattern != '[' && *pattern != '\\')
-        while (*string && *pattern != *string)
-          string++;
-
-      while (*string)
+      /* If the next significant pattern character is a literal, fast-forward
+         the string to its next occurrence to reduce backtracking. */
       {
-        if (ms_globmatch (string, pattern))
-          return GLOBMATCH_TRUE;
-        string++;
+        unsigned char next = (unsigned char)*pattern;
+
+        if (next == '\\' && pattern[1])
+          next = (unsigned char)pattern[1];
+
+        if (next != '?' && next != '[' && next != '*')
+        {
+          while (*string && (unsigned char)*string != next)
+            string++;
+        }
       }
-      return GLOBMATCH_FALSE;
 
-    case '?':
-      if (*string)
-        break;
-      return GLOBMATCH_FALSE;
+      star_p = pattern - 1; /* remember position of '*' */
+      star_s = string;      /* remember current string position */
+      continue;
 
-      /* set specification is inclusive, that is [a-z] is a, z and
-       * everything in between. this means [z-a] may be interpreted
-       * as a set that contains z, a and nothing in between.
-       */
     case '[':
-      if (*pattern != GLOBMATCH_NEGATE)
-        negate = GLOBMATCH_FALSE;
-      else
-      {
-        negate = GLOBMATCH_TRUE;
-        pattern++;
-      }
-
-      match = GLOBMATCH_FALSE;
-
-      while (!match && (c = *pattern++))
-      {
-        if (!*pattern)
-          return GLOBMATCH_FALSE;
-
-        if (*pattern == '-') /* c-c */
-        {
-          if (!*++pattern)
-            return GLOBMATCH_FALSE;
-          if (*pattern != ']')
-          {
-            if (*string == c || *string == *pattern || (*string > c && *string < *pattern))
-              match = GLOBMATCH_TRUE;
-          }
-          else
-          { /* c-] */
-            if (*string >= c)
-              match = GLOBMATCH_TRUE;
-            break;
-          }
-        }
-        else /* cc or c] */
-        {
-          if (c == *string)
-            match = GLOBMATCH_TRUE;
-          if (*pattern != ']')
-          {
-            if (*pattern == *string)
-              match = GLOBMATCH_TRUE;
-          }
-          else
-            break;
-        }
-      }
-
-      if (negate == match)
-        return GLOBMATCH_FALSE;
-
-      /* If there is a match, skip past the charset and continue on */
-      while (*pattern && *pattern != ']')
-        pattern++;
-      if (!*pattern++) /* oops! */
-        return GLOBMATCH_FALSE;
-      break;
-
-    case '\\':
-      if (*pattern)
-        c = *pattern++;
-      break;
-
-    default:
-      if (c != *string)
-        return GLOBMATCH_FALSE;
+    {
+      const char *pp = pattern;
+      if (*string == '\0')
+        goto star_backtrack;
+      if (!_match_charclass (&pp, (unsigned char)*string))
+        goto star_backtrack;
+      pattern = pp;
+      string++;
       break;
     }
 
-    string++;
+    case '\\':
+      if (*pattern)
+        c = (unsigned char)*pattern++;
+      /* FALLTHROUGH */
+
+    default:
+      if ((unsigned char)*string != c)
+        goto star_backtrack;
+      string++;
+      break;
+    }
+
+    continue;
+
+  star_backtrack:
+    /* If there was a previous '*', backtrack: let it consume one more
+       character and retry from pattern just after that '*'. */
+    if (star_p)
+    {
+      if (*star_s == '\0')
+        return 0;
+      string = ++star_s;
+      pattern = star_p + 1;
+      continue;
+    }
+    return 0;
+  }
+}
+
+/***************************************************************************
+ * Character class parser helper function.
+ *
+ *   On entry: *pp points just past '['.
+ *             If the class is negated, the next character will be '^'
+ *             and is handled inside this function.
+ *
+ *   On return: *pp is advanced past the closing ']'.
+ *
+ * Return 1 if c matches the class, 0 otherwise.
+ ***************************************************************************/
+static int
+_match_charclass (const char **pp, unsigned char c)
+{
+  const char *p;
+  int negate = 0;
+  int matched = 0;
+
+  if (pp == NULL || *pp == NULL)
+    return 0;
+
+  p = *pp;
+
+  /* Handle negation */
+  if (*p == '^' || *p == '!')
+  {
+    negate = 1;
+    p++;
   }
 
-  return !*string;
-} /* End of ms_globmatch() */
+  /* Per glob rules, leading ']' is literal */
+  if (*p == ']')
+  {
+    matched = (c == ']');
+    p++;
+  }
+
+  /* Per glob rules, leading '-' is literal */
+  if (*p == '-')
+  {
+    matched |= (c == '-');
+    p++;
+  }
+
+  /* Main loop until ']' or end of string */
+  while (*p && *p != ']')
+  {
+    unsigned char pc = (unsigned char)*p;
+
+    if (p[1] == '-' && p[2] && p[2] != ']' && (unsigned char)pc <= (unsigned char)p[2])
+    {
+      /* Range X-Y (only ascending ranges are supported) */
+      unsigned char start = pc;
+      unsigned char end = (unsigned char)p[2];
+
+      matched |= (c >= start && c <= end);
+
+      p += 3; /* skip X-Y */
+    }
+    else
+    {
+      /* Literal character */
+      matched |= (c == pc);
+      p++;
+    }
+  }
+
+  /* Malformed class (no closing ']') → no match */
+  if (*p != ']')
+  {
+    *pp = p;
+    return 0;
+  }
+
+  *pp = p + 1; /* skip ']' */
+
+  return negate ? !matched : matched;
+}
